--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
     <div class="barra_login">
         <div class="form_base">
             <form class="login">
-                <input type="text" id="usuario" name="usuario" class="login_usuario">
+                <div class="campoInput">
+                <input type="text" id="usuario" name="usuario" class="login_usuario" required>
                 <label for="usuario">Usuario</label>
-                <input type="password" id="senha" name="senha" class="login_usuario">
+            </div>
+            <div class="campoInput">
+                <input type="password" id="senha" name="senha" class="login_usuario" required>
                 <label for="senha">Senha</label>
-                <button type="submit">Logar</button>
+            </div>
+            <div class="campoInput">
+                    <button type="submit">Logar</button>
+            </div>
             </form>
         </div>
         <div class="form_esqueci_senha">
